# gnome-paint

./: HeadPage.md  Makefile.in  ProjectHome.md  aclocal.m4  configure  configure.ac
data/: Makefile.in
data/desktop/: Makefile.am  Makefile.in
data/icons/16x16/: Makefile.in
data/icons/16x16/actions/: Makefile
data/ui/: Makefile.in  gnome_paint.ui
po/: LINGUAS  POTFILES.in  es_MX.po  fr.po  gnome_paint.pot  he.po  it.po  pt_BR.po  ru.po
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  canvas.c  canvas.h  color-picker.c  color.c  color.h  common.h  cv_drawing.c  cv_drawing.h  cv_ellipse_tool.c  cv_ellipse_tool.h  cv_line_tool.c  cv_line_tool.h  cv_pencil_tool.c  cv_pencil_tool.h  cv_polygon_tool.c  cv_polygon_tool.h  cv_rect_select.c  cv_rectangle_tool.c  cv_rectangle_tool.h  cv_resize.c  cv_resize.h  cv_rounded_rectangle_tool.c  file.c  file.h  gp-image.c  gp-image.h  gp_point_array.c  main.c  pixbuf-file-chooser.h  pixbuf_util.c  tool_line.c  tool_line.h  toolbar.c  toolbar.h  undo.c  undo.h
tags/0.1/: configure
tags/0.1/data/: Makefile.in
tags/0.1/data/desktop/: gnome-paint.desktop
tags/0.1/data/icons/16x16/: Makefile.in
tags/0.1/data/ui/: Makefile.in  gnome_paint.ui
tags/0.1/po/: POTFILES.in  gnome_paint.pot
tags/0.1/src/: Makefile.in  color.h  common.h  cv_drawing.c  cv_drawing.h  cv_line_tool.c  cv_line_tool.h  cv_resize.h  file.h  main.c  pixbuf-file-chooser.c  toolbar.c
tags/0.2/: Makefile.in  configure.ac
tags/0.2.1/data/icons/16x16/actions/: Makefile.in
tags/0.2.1/src/: Makefile.in  cv_pencil_tool.c  cv_polygon_tool.c  cv_rectangle_tool.c  file.c  main.c
tags/0.2/data/: Makefile.in
tags/0.2/data/desktop/: Makefile.am  Makefile.in
tags/0.2/data/icons/: Makefile.in
tags/0.2/data/icons/16x16/actions/: Makefile.am
tags/0.2/data/icons/16x16/apps/: Makefile.in
tags/0.2/src/: color.c  file.h
tags/0.3/data/icons/16x16/actions/: Makefile.am.bak
tags/0.3/po/: gnome_paint.pot
trunk/: configure  configure.ac
trunk/data/: Makefile.am
trunk/data/icons/: Makefile.in
trunk/data/icons/16x16/: Makefile.am  Makefile.in
trunk/data/icons/16x16/actions/: Makefile  Makefile.in
trunk/data/icons/16x16/apps/: Makefile.in
trunk/data/ui/: gnome_paint.ui
trunk/po/: LINGUAS  it.po  pt_BR.po
trunk/src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  canvas.c  canvas.h  color.c  common.h  cv_drawing.c  cv_drawing.h  cv_ellipse_tool.c  cv_line_tool.c  cv_paintbrush_tool.c  cv_polygon_tool.c  cv_rect_select.c  cv_rectangle_tool.c  cv_rectangle_tool.h  cv_resize.c  file.c  file.h  gp-image.c  gp_point_array.c  gp_point_array.h  main.c  pixbuf-file-chooser.c  pixbuf-file-chooser.h  tool_line.c  toolbar.c  toolbar.h  undo.c  undo.h
trunk/src/pixmaps/: Makefile.in  rect2.xpm
wiki/: HeadPage.wiki
